Multi-platform JPAD